
	* Fixed bug #9308: htmlArea RTE: link on colour name doesn't set colour

2008-09-14  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #3687: Disable "versioning" and "moreoptions"-menuitem via contextMenu.[key].disableItems in User TSconfig (thanks to Susanne Moog)
	* Fixed bug #9172: Wrong display of deleted owners and groups in Web->Access->Permissions (thanks to Johannes Pieper)

2008-09-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Reverted change from 12.09.2008 (bug #8985). I mistakenly assumed that another core developer gave +1 to it. I had two non-core +1s only.
	* Fixed bug #9313: Introduce HTTP_STATUS-Constants (thanks to Steffen Kamper)
	* Re-committed bugfix #8985 (Enable USER object to become USER_INT on the fly) because of +1 from Stanislas

2008-09-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9277: Incorrect size of htmlArea RTE dialogue windows in Google Chrome browser
	* Fixed bug #9338: htmlArea RTE: incorrect opening size of some dialogue windows
	* Fixed bug #9339: htmlArea RTE: Enable resizing of acronym dialogue window in IE
	* Added feature #9340: htmlArea RTE: Configuration options for size and position of dialogue windows
	* Fixed bug #9341: htmlArea RTE: unable to disable the acronym element from the acronym feature

2008-09-13  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9318: Enhance and fix tslib_eidtools

2008-09-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8985: Enable USER object to become USER_INT on the fly

2008-09-11  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8644: Usersettings with fullHelptextMode looks weird (thanks to Steffen Kamper)

2008-09-10  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9315: Description of tslib_fe::includeTCA is incorrect

2008-09-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9268: TCA is not loaded in FE when config cache is disabled

2008-09-08  Benjamin Mack  <benni@typo3.org>
