@@ -195,6 +195,7 @@ body#typo3-mod-user-ws-index-php,
 body#typo3-mod-user-ws-workspaceforms-php,
 body#typo3-mod-php,
 body#typo3-mod-tools-em-index-php,
+body#typo3-wizard-rte-php,
 body#typo3-pagetree,
 body#typo3-db-new-php,
 body#typo3-move-el-php,
